z-index fix

--- a/components/main_nav/main_nav.css
+++ b/components/main_nav/main_nav.css
@@ -64,6 +64,7 @@
     padding: 0;
     display: flex;
     justify-content: center;
+    z-index: 3;
 }
 
 [data-component="main_nav"] ul.menu li {
